сделал бегущие цифры

--- a/src/views/blocks/facts.j2
+++ b/src/views/blocks/facts.j2
@@ -4,15 +4,15 @@
       <h2 class="facts__title title">Факты и цифры</h2>
       <ul class="facts__numbers">
         <li class="facts__numbers-item">
-          <span class="facts__numbers-value">100%</span>
+          <span class="facts__numbers-value" data-max-value="100" data-time="1000"><span>50</span>%</span>
           <p class="facts__numbers-text">Контроль на всех этапах работы – заказчик в курсе всех процессов</p>
         </li>
         <li class="facts__numbers-item">
-          <span class="facts__numbers-value">300</span>
+          <span class="facts__numbers-value" data-max-value="300" data-time="1000"><span>150</span></span>
           <p class="facts__numbers-text">Нашими клиентами являются лидирующие компании на рынке в различных сферах деятельности</p>
         </li>
         <li class="facts__numbers-item">
-          <span class="facts__numbers-value">360+</span>
+          <span class="facts__numbers-value" data-max-value="360" data-time="1000"><span>250</span>+</span>
           <p class="facts__numbers-text">Партнеров и поставщиков решений</p>
         </li>
       </ul>
