--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -86,5 +86,6 @@
   <script src="./js/simplebar.min.js" defer></script>
   <script src="./js/simplebar-prefs.min.js" defer></script>
   <script src="./js/contacts.min.js" defer></script>
+  <script src="./js/facts.min.js" defer></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
