--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -144,6 +144,7 @@
   <script src="./js/index-swiper.min.js" defer></script>
   <script src="./js/modal-image.min.js" defer></script>
   <script src="./js/engineer-cons.min.js" defer></script>
+  <script src="./js/facts.min.js" defer></script>
   {# <script src="./js/cases.min.js" defer></script> #}
   <script src="./js/main.min.js" defer></script>
 {% endblock %}
