поднял стрелочки для слайдера команды на десктопе

--- a/src/scss/blocks/team.scss
+++ b/src/scss/blocks/team.scss
@@ -37,4 +37,8 @@
   @media (width < $ears-swiper-buttons-available) {
     margin-top: 15px;
   }
+
+  @media (width > $ears-swiper-buttons-available) {
+    top: calc(50% - 195px);
+  }
 }
