--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -686,6 +686,7 @@
 
     background-color: $white-color;
     border: 0.5px solid #d4d4d4;
+    border-radius: 5px;
     box-shadow: none;
 
     & .is-open,
