--- a/src/views/blocks/swipers/vendors-swiper.j2
+++ b/src/views/blocks/swipers/vendors-swiper.j2
@@ -73,7 +73,7 @@
       </div>
 
       <div class="vendors__swiper-container card-swiper-container">
-        <div class="vendors__swiper section__card-swiper card-swiper swiper">
+        <div class="vendors__swiper section__card-swiper card-swiper swiper" id="vendors-swiper">
           <div class="swiper-wrapper">
             {% for vendorItem in VENDORS %}
               <div class="card-swiper__slide swiper-slide">
