--- a/src/views/pages/partners.j2
+++ b/src/views/pages/partners.j2
@@ -66,6 +66,7 @@
                     <p class="partners__info-description">{{ partnerItem.description | safe }}</p>
                     <p class="partners__info-status">Статус: <span class="partners__info-status-value">{{ partnerItem.status | safe }}</span></p>
                     <a href="{{ partnerItem.url | safe }}" class="partners__info-link">Сайт партнера</a>
+                    <a class="partners__info-more-button button" href="./partner-page.html">Подробнее о партнере</a>
                   </div>
                 </li>
               {% endfor %}
