--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -194,7 +194,7 @@ a.contacts__item {
 .contacts__map iframe {
   width: 100%;
 
-  filter: invert(1) grayscale(0.5);
+  // filter: invert(1) grayscale(0.5);
 
   @media (min-width: $tablet-width) {
     height: 600px;
@@ -203,7 +203,7 @@ a.contacts__item {
     width: 100%;
     height: 843px;
 
-    filter: invert(1) grayscale(0.5);
+    // filter: invert(1) grayscale(0.5);
   }
 }
 
