убрал текстовый отзыв зазказчика

--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -50,10 +50,10 @@
             <a class="case__review-link" href="@img/review-letter.jpg" data-review data-image-can-open-in-modal>
               <img class="case__review-image" src="@img/review-letter.jpg" alt="">
             </a>
-            <div class="case__review-text-container">
+            {# <div class="case__review-text-container">
               <img class="case__review-company-logo" width="170" height="60" src="@img/cases/logos/spaarmann.webp" alt="Логотип компании C. Spaarmann GmbH.">
               <p class="case__review-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
-            </div>
+            </div> #}
           </div>
         </div>
       </div>
