--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -135,6 +135,7 @@
 
 {% block modal %}
   {% include "./blocks/modals/modal-image.j2" %}
+  {% include "./blocks/modals/modal-consultation.j2" %}
 {% endblock %}
 
 {% block js %}
