--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -84,8 +84,10 @@
         </div>
       </div>
       <div class="contacts__map">
-        <span class="visually-hidden">Мы на карте.</span>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac561ee9a96e3f25b83c49ff300f715d718cceee8ef46433bf8fd89d04dc67461&amp;source=constructor" width="600" height="450" scroll=false></iframe>
+        <div class="contacts__map-wrapper">
+          <span class="visually-hidden">Мы на карте.</span>
+          <iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac561ee9a96e3f25b83c49ff300f715d718cceee8ef46433bf8fd89d04dc67461&amp;source=constructor" width="600" height="450" scroll=false></iframe>
+        </div>
       </div>
     </section>
 
@@ -94,5 +96,6 @@
 
 {% block js %}
   <script src="./js/contacts.min.js" defer></script>
+  <script src="./js/map.min.js" defer></script>
   <script src="./js/main.min.js" defer></script>
 {% endblock %}
